welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:2: error: missing parameter type
	if (n=>21){return 2*Math.abs(n)}else{return Math.abs(n)}
            ^